# nonebot_plugin_russian_ban

./: .gitignore  README.md  __init__.py  pyproject.toml
nonebot-plugin-russian-ban/: __init__.py  utils.py
nonebot_plugin_russian_ban/: __init__.py  utils.py
